healthchecks an slow starts

--- a/nginx/distribute_http_load.conf
+++ b/nginx/distribute_http_load.conf
@@ -6,7 +6,7 @@ upstream backend {
     server example.com:80   weight=2;
 }
 server{
-    location / {
+    location /match/something {
         proxy_pass http://backend;
     }
 }
