active healthchecks for tcp and http

--- a/nginx/tcp_health_check.conf
+++ b/nginx/tcp_health_check.conf
@@ -1,5 +1,5 @@
 # Problem: You need to check your upstream TCP servers for health and remove unhealthy servers from the pool
-# Solution: use the health)check directive in the server block for an active health check.
+# Solution: use the health)check directive in the server block for an active health check. (passive)
 
 stream {
     upstream postgres_read {
