encrypt data in transit

--- a/nginx/least_conn.conf
+++ b/nginx/least_conn.conf
@@ -1,4 +1,4 @@
-# least_conn instead of the default round robin
+# using least_conn algorithm instead of the default round robin
 
 upstream backend {
     least_conn;
