--- a/nginx/https_redirect.conf
+++ b/nginx/https_redirect.conf
@@ -2,7 +2,7 @@
 # Solution: use a rewrite to send all http requests to https
 
 server {
-    listen 80 default_server;
+    listen 80;
     listen [:::]:80;
     server_name _;
     return 301 https://$host$request_uri;
