Update Dockerfile: add vim and iptables for experiments

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,7 +3,9 @@ FROM ubuntu:16.04
 MAINTAINER Joseph Muli <jayjaymuli00@gmail.com>
 
 RUN apt-get update && \
-    apt-get install -y nginx
+    apt-get install -y nginx && \
+	apt-get install -y vim && \
+	apt-get install -y iptables
 
 # does nothing but pipe out activity to the Docker daemon, well for now this is sufficient.
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
